--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./app/.nuxt/tsconfig.json",
+
   "compilerOptions": {
     "strict": true,
     "baseUrl": ".",
     "paths": {
       "~/*": ["./*"],
       "@utils/*": ["./utils/*"],
-      "@components/*": ["./components/*"]
+      "@components/*": ["./components/*"],
+      "types": ["class-variance-authority"]
     },
     "skipLibCheck": true,
     "ignoreDeprecations": "5.0",
